
[metadata]
name = "stk"
version = attr: stk.VERSION
description = "Opinionated CloudFormation Deployments"
license = "MIT"
author = "John Woffindin <j.woffindin@gmail.com>"
classifiers =
    Programming Language :: Python :: 3
keywords = CloudFormation

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    executable-name = stk.cli:stk
