[metadata]
name = cfn-stk
version = attr: stk.VERSION
author = John Woffindin
author_email = j.woffindin@gmail.com
description = Opinionated CloudFormation deployments
keywords = cloudformation, aws, cfn, cli
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jwoffindin/stk
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
zip_safe = False
install_requires =
    boto3
    cfn-flip
    click
    click-aliases
    cryptography
    gitpython
    giturlparse
    inquirer
    jinja2
    jinja2-strcase
    pyOpenSSL
    pyyaml
    rich
    setuptools
packages = find:
package_dir =
    =src
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    stk = stk.cli:stk
    cfn = stk.cli:stk
